--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -11,8 +11,8 @@
       <%#<li><%= link_to current_user.name, "#", class: "user-nickname" </li> %>
       <%#<li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" </li>%>
       <%# else %>
-      <li><%= link_to 'ログイン', "#", class: "login sign-set" %></li>
-      <li><%= link_to '新規登録', "#", class: "sign-up sign-set" %></li>
+      <li><%= link_to 'ログイン', new_user_session_path , class: "login sign-set" %></li>
+      <li><%= link_to '新規登録',  new_user_registration_path , class: "sign-up sign-set" %></li>
       <%# end %>
     </ul>
   </div>
