--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -7,13 +7,13 @@
     <%= link_to "Roomを作る", "#", class:"room-btn" %>
     </div>
     <ul class='lists'>
-      <%# if user_signed_in? %>
-      <%#<li><%= link_to current_user.name, "#", class: "user-nickname" </li> %>
-      <%#<li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" </li>%>
-      <%# else %>
+      <% if user_signed_in? %>
+        <li><%= link_to current_user.nickname, "#", class: "user-nickname sign-set" %></li> 
+        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout sign-set" %></li>
+      <% else %>
       <li><%= link_to 'ログイン', new_user_session_path , class: "login sign-set" %></li>
       <li><%= link_to '新規登録',  new_user_registration_path , class: "sign-up sign-set" %></li>
-      <%# end %>
+      <% end %>
     </ul>
   </div>
 </div>
