--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -92,7 +92,7 @@
   padding: 10px;
 }
 
-/*/ アカウント部分 /*/
+/*/ フォーム関係 /*/
 .account-page {
   background-color: #454C59;
   height: 100vh;
@@ -120,6 +120,54 @@
 }
 
 .field {
+  margin: 20px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.4em 1.6em;
+  font-size: 15px;
+  color: white#BF946F;
+  background-color: white;
+  text-decoration: none;
+  user-select: none;
+  border: 1px #BF946F solid;
+  border-radius: 3px;
+  transition: 0.4s ease;
+}
+
+/*/ ルーム作成部分 /*/
+.room-page {
+  background-color: #454C59;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.room-inner {
+  padding: 30px;
+  width: 70%;
+  height: 70%;
+}
+
+.room-title {
+  background-color: #F2D6A2;
+  height: 40px;
+  text-align: center;
+  font-size: 25px;
+}
+
+.room-form {
+  background-color: #F2D6A2;
+  margin: 20px 0;
+  padding: 10px 30px;
+}
+
+.room-text {
+  width: 300px;
+}
+
+.room-field {
   margin: 20px;
 }
 
