新規ルーム作成部分

--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -14,9 +14,9 @@
       </div>
       <div class="room-field">
         <select name="room[user_ids][]">
-        <option value="">チャットするユーザーを選択してください</option>
+        <option value="">共有するユーザーを選択してください</option>
         <% User.where.not(id: current_user.id).each do |user| %>
-        <option value=<%= user.id %>><%= user.name %></option>
+        <option value=<%= user.id %>><%= user.nickname %></option>
         <% end %>
         </select>
         <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>
