--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -83,6 +83,15 @@
   border-right: 5px #454C59 solid;
   padding: 10px;
 }
+.room-name {
+  border: 2px #454C59 solid;
+  padding: 2px 10px ;
+}
+.room-names{
+  text-decoration: none;
+  color: black;
+  font-size: 15px;
+}
 
 /*/メモ部分 /*/
 .memo {
