--- a/app/views/memos/_side_bar.html.erb
+++ b/app/views/memos/_side_bar.html.erb
@@ -1,1 +1,9 @@
-<h2>roomが入ります</h2>
+<div class="rooms">
+  <% current_user.rooms.each do |room| %>
+  <div class="room">
+    <div class="room-name">
+      <%= link_to room.name, "#", class: "room-names" %>
+    </div>
+  </div>
+  <% end %>
+</div>
