--- a/app/views/memos/_memo.html.erb
+++ b/app/views/memos/_memo.html.erb
@@ -1,1 +1,5 @@
-<h1>メモが入ります</h1>
+<% unless @memos.empty? %>
+  <%# @memos.each do |memo| %>
+<% else %>
+  <%= link_to "商品を出品する", new_room_memo_path %>
+<% end %>
