--- a/app/views/memos/_side_bar.html.erb
+++ b/app/views/memos/_side_bar.html.erb
@@ -1,9 +1,11 @@
 <div class="rooms">
-  <% current_user.rooms.each do |room| %>
-  <div class="room">
-    <div class="room-name">
-      <%= link_to room.name, "#", class: "room-names" %>
+  <% if user_signed_in? %>
+    <% current_user.rooms.each do |room| %>
+    <div class="room">
+      <div class="room-name">
+        <%= link_to room.name, room_memos_path(room) , class: "room-names" %>
+      </div>
     </div>
-  </div>
+    <% end %>
   <% end %>
 </div>
