--- a/app/views/memos/_memo.html.erb
+++ b/app/views/memos/_memo.html.erb
@@ -1,1 +1,18 @@
 <%= link_to "メモを作成する", new_room_memo_path(@room) %>
+
+<% @memos.each do |memo|%>
+<div class="memo-container">
+  <div class="memo-user memos">
+    <%= memo.user.nickname %>
+  </div>
+  <div class="memo-create memos">
+    <%= memo.created_at %>
+  </div>
+  <div class="memo-item memos">
+    <%= memo.item %>
+  </div>
+  <div class="memo-info memos">
+    <%= memo.info %>
+  </div>
+</div>
+<% end %>
