--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -86,11 +86,14 @@
 .room-name {
   border: 2px #454C59 solid;
   padding: 2px 10px ;
+  margin-bottom: 5px;
+  background-color: #f7ecd8;
 }
 .room-names{
   text-decoration: none;
   color: black;
   font-size: 15px;
+  display: block;
 }
 
 /*/メモ部分 /*/
@@ -104,6 +107,32 @@
 .memo-text {
   height: 200px;
   width: 80%;
+}
+.memo-maker{
+  display: inline-block;
+  padding: 0.4em 1.6em;
+  font-size: 15px;
+  color: black;
+  background-color: lightgoldenrodyellow ;
+  text-decoration: none;
+  user-select: none;
+  border: 1px #454C59 solid;
+  border-radius: 3px;
+  transition: 0.4s ease;
+  margin-bottom: 20px;
+}
+.memo-container {
+  background-color: #FFF;
+  margin-bottom:15px ;
+}
+.memo-list {
+  display: flex;
+  justify-content: start;
+}
+.memos {
+  padding: 1px 4px;
+  border: 1px black solid;
+  margin:1px ;
 }
 
 /*/ フォーム関係 /*/
