--- a/app/views/memos/_memo.html.erb
+++ b/app/views/memos/_memo.html.erb
@@ -1,11 +1,11 @@
 <div class="memo-top">
   <%= link_to "メモを作成する", new_room_memo_path(@room),class: "room-btn" %>
   <div class= "room-current">
-    <%= "現在のルーム【#{@room.name}】" %>
+    <%= "ルーム名【#{@room.name}】" %>
   </div>
   <div class= room-navi>
     <%= link_to "ルーム編集", edit_room_path(@room),class: "room-edit room-btn" %>
-    <%= link_to "ルーム削除", room_path(@room),class: "room-edit room-btn",method: :delete %>
+    <%= link_to "ルーム削除", room_path(@room),class: "room-delete room-btn",method: :delete %>
   </div>
 </div>
 
