--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -21,6 +21,7 @@
 
 .nav {
   width: 100%;
+  height: 35px;
   display: flex;
   justify-content: space-between;
 }
@@ -57,7 +58,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0.4em 1.6em;
-  background-color: #BF946F;
+  background-color: lightgoldenrodyellow;
   border-radius: 3px;
   transition: 0.4s ease;
 }
@@ -70,7 +71,7 @@
 
 .sign-set{
   font-size: 15px;
-  color: white;
+  color: black;
   text-decoration: none;
   user-select: none;
 }
