--- a/app/views/memos/_header.html.erb
+++ b/app/views/memos/_header.html.erb
@@ -1,6 +1,6 @@
 <div class= "top-wrapper">
   <div class= "logo">
-  <%= link_to image_tag("logo.png", class:"icon"), "#" %>    
+  <%= link_to image_tag("logo.png", class:"icon"), root_path %>    
   </div>
   <div class="nav">
     <div class="set-room">
