--- a/app/views/rooms/_demo.html.erb
+++ b/app/views/rooms/_demo.html.erb
@@ -12,10 +12,18 @@
 <div class="memo-container">
   <div class="buy">
     購入者：
-    <label><input type="checkbox">ユーザー名①</label>
-    <label><input type="checkbox">ユーザー名②</label>
-    <label><input type="checkbox">太郎くん</label>
-    <label><input type="checkbox">花子さん</label>
+    <div class="buy-name">
+      <label><input type="checkbox">ユーザー名①</label>
+    </div>
+    <div class="buy-name">
+      <label><input type="checkbox">ユーザー名②</label>
+    </div>
+    <div class="buy-name">
+      <label><input type="checkbox">太郎くん</label>
+    </div>  
+    <div class="buy-name">
+      <label><input type="checkbox">花子さん</label>
+    </div>
   </div>
   <div class="first-list">
     <div class="memo-user memos">
