--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -13,12 +13,16 @@
         <label class='chat-room-form__label' for='chat_room_チャットメンバー'>ルームメンバー</label>
       </div>
       <div class="room-field">
-        <select name="room[user_ids][]">
-        <option value="">共有するユーザーを選択してください</option>
-        <% User.where.not(id: current_user.id).each do |user| %>
-        <option value=<%= user.id %>><%= user.nickname %></option>
+        <% 4.times do %>
+          <div class= "room-user-select">
+            <select name="room[user_ids][]">
+            <option value="">共有するユーザーを選択してください</option>
+            <% User.where.not(id: current_user.id).each do |user| %>
+            <option value=<%= user.id %>><%= user.nickname %></option>
+            <% end %>
+            </select>
+          </div>
         <% end %>
-        </select>
         <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>
       </div>
     </div>
