--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -12,16 +12,18 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  position:relative
 }
 .icon {
   width: 100px;
   height: 100px;
   margin-right: 80px;
+  padding: 2px;
 }
 
 .nav {
   width: 100%;
-  height: 35px;
+  height: 50px;
   display: flex;
   justify-content: space-between;
 }
