--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="room-page">
   <div class="room-inner">
     <div class= "room-title">
-       <h2>メモルームの作成</h2>
+       <h3>メモルームの編集</h3>
     </div>
     <div class= "room-form">
       <%= form_with model: @room, local: true do |f|%>
@@ -26,7 +26,7 @@
         <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>
       </div>
       <div class= "action">
-      <%= f.submit class: 'btn'%>
+      <%= f.submit'ルームを更新', class: 'btn'%>
       </div>
       <% end %>
     </div>
